# ChangeLog for www-client/chromium
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.324 2011/04/02 13:28:38 phajdan.jr Exp $

*.svn/text-base/chromium-12.0.712.0 (10 Apr 2011)
*chromium-11.0.696.34-r1 (10 Apr 2011)
*.svn/text-base/chromium-11.0.696.28 (10 Apr 2011)

  10 Apr 2011; Andrew John Hughes <andrew@gentoo.org>
  +files/chromium-browser.xml, +files/chromium-ffmpeg-build-r0.patch,
  +files/chromium-gcc46.patch, +files/chromium-gecko-mediaplayer-r0.patch,
  +files/chromium-gecko-mediaplayer-r1.patch, +files/chromium-launcher.sh,
  +files/chromium-launcher-r1.sh, +files/chromium-system-flac-r0.patch,
  +files/chromium-system-icu-r0.patch, +files/chromium-system-speex-r0.patch,
  +files/chromium-system-vpx-r1.patch, +files/chromium-system-vpx-r2.patch,
  +files/chromium-system-vpx-r3.patch, +files/chromium-system-vpx-r4.patch,
  +files/chromium-system-xdg-utils-r0.patch,
  +files/chromium-webkit-version.patch, +files/experimental.gyp,
  +files/flac.gyp, +files/speex.gyp, +files/v8.gyp,
  +chromium-11.0.696.34.ebuild, +metadata.xml:
  Add missing ptrdiff_t cases that need cstddef inclusion.

  02 Apr 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  +files/chromium-ffmpeg-build-r0.patch, chromium-11.0.696.28.ebuild,
  chromium-12.0.712.0.ebuild:
  Backport upstream FFmpeg compatibility patch, bug #355405 by Philipp
  <sefi@s-e-f-i.de>.

*chromium-11.0.696.28 (01 Apr 2011)

  01 Apr 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  -chromium-10.0.648.133.ebuild, -chromium-11.0.696.16.ebuild,
  +chromium-11.0.696.28.ebuild:
  Version bump for beta channel release. Remove old.

  30 Mar 2011; Alex Alexander <wired@gentoo.org> chromium-9999-r1.ebuild:
  re-added suffix/slot to the desktop entry, bug #361211

*chromium-11.0.696.25 (29 Mar 2011)

  29 Mar 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  -chromium-11.0.696.14.ebuild, +chromium-11.0.696.25.ebuild,