@@ -20,6 +20,8 @@ AUX flac.gyp 416 RMD160 5af2709cae77ba139b32b0f22bca347a87170e0b SHA1 cdb2f5404c
 AUX speex.gyp 434 RMD160 6111f912450ece1cb016f3800e1a22f135cc68ff SHA1 23c1917b8bc7a4b395a8b5c1b91b6661d73f3df3 SHA256 34b977ccf3092a3af963c6ec1dc79a1f26bf5114571e3dfd2e94c2a6633537b9
 AUX v8.gyp 2602 RMD160 c76f58232d24f9477f9a7a7ac74b31351d64847b SHA1 f3e8796f05d340447cb4673e9a36017deda80391 SHA256 a55e88955982c8bb8beeb55bdc2a62d1d6125e082ecea01c9914592092ee1cde
 DIST chromium-11.0.696.34.tar.bz2 145096313 RMD160 f4d87286b641bc4fe10f677fadf9a0c7c04e9b60 SHA1 0c64ad7cdc3283746463ae22cf34487d6b51f83f SHA256 854f34d9cf2a10370a91c0dcd38bd48240f7bd55b9ff46333794e6bdf0cbdcff
+DIST chromium-11.0.696.43.tar.bz2 145069006 RMD160 c069b275e2170b7770820f1a93358913452f7a7e SHA1 8e6ab382f0efed2156bd477a73874a1d5d4b59af SHA256 e550d3fff04908ff85d838e66d524ed08cbe8a8dc5052ab7dd51900dccfa7e2d
 EBUILD chromium-11.0.696.34.ebuild 10330 RMD160 e645688a591b1bd2da4976d1b2dc29be9ecc1925 SHA1 f5580fa8621d8b96265a0f83334b4e892bba39fe SHA256 1eda7ce0a9c74876f98ebcafea36c695b7656b0bf09425682f675e3a9f74cf8d
-MISC ChangeLog 74582 RMD160 0228a52b97cc8229187dfa8253467f924ff59cc0 SHA1 9f2052ec003511ba33abf78fdb30d05e3eeca784 SHA256 62363fe00cf1ae39db2e1cdc4859d1d7cf45275bb3f754b5e6fb7d52753317db
+EBUILD chromium-11.0.696.43.ebuild 10354 RMD160 80bbe8af332f1278536637de15a99dda9527b811 SHA1 bbaaa49854a4ef25f760f47e049c1b701b6295d1 SHA256 6478e046ff1a5348540d3d1671a2766ec9ee1c618140d6b91541124f782c0af9
+MISC ChangeLog 72977 RMD160 9c73c72a4cd0a5c6e9937f24fa99872744a3e059 SHA1 16f4d6d786703582beaffd568509abf01208d2d3 SHA256 3bc06735a2459c7c5c597564099b32c84077e94877e40c12de72589f5d7447b9
 MISC metadata.xml 392 RMD160 5fbc2d4aaba9b5262830ad7201bbb58d13b49787 SHA1 7834b589940775fae16e006524e4cbe808ad5cc7 SHA256 3022ab24c39c42b1bc53666fe4fc3da2305d69db5655ccf261cb521ecfb17282
