@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.324 2011/04/02 13:28:38 phajdan.jr Exp $
 
+*chromium-11.0.696.43 (17 Apr 2011)
+
+  17 Apr 2011; Andrew John Hughes <andrew@gentoo.org>
+  +chromium-11.0.696.43.ebuild:
+  Port gcc 4.6.0 fixes forward to latest version.
+
 *.svn/text-base/chromium-12.0.712.0 (10 Apr 2011)
 *chromium-11.0.696.34-r1 (10 Apr 2011)
 *.svn/text-base/chromium-11.0.696.28 (10 Apr 2011)
